# hcli-tools

./: README.md  hcli-tools.cabal  normalize-path.hs  number-files.hs  remove-dupes-in-path.hs  resize-imgs.hs
CLI/Tool/: Normalizer.hs
Shelly/: Debug.hs  Utils.hs
System/Console/CmdArgs/: Utils.hs
test/: NormalizerSpec.hs
